# protrust

./: .clippy.toml  .gitignore  Cargo.toml  rust-toolchain
protrust/: Cargo.toml
protrust/benches/: varint_io.rs
protrust/include/: timestamp.rs
protrust/src/: collections.rs  extend.rs  io.rs  lib.rs  raw.rs  unknown_fields.rs
protrust/src/collections/: mod.rs  unknown_fields.rs
protrust/src/doctest/: timestamp.rs
protrust/src/io/: mod.rs  read.rs  stream.rs  write.rs
protrust/src/reflect/: full.rs  macros.rs  mod.rs
protrust_macros/: Cargo.toml
protrust_macros/src/: lib.rs
protrustc/: CMakeLists.txt  README.md
protrustc/src/protrust/compiler/: main.cpp  rust_enum_generator.cpp  rust_enum_generator.h  rust_field_generator.cpp  rust_field_generator.h  rust_file_generator.cpp  rust_file_generator.h  rust_generator.cpp  rust_generator.h  rust_globals_generator.cpp  rust_globals_generator.h  rust_helpers.cpp  rust_helpers.h  rust_map_field_generator.cpp  rust_map_field_generator.h  rust_message_field_generator.cpp  rust_message_field_generator.h  rust_message_generator.cpp  rust_message_generator.h  rust_mod_generator.cpp  rust_mod_generator.h  rust_names.h  rust_options.h  rust_primitive_field_generator.cpp  rust_primitive_field_generator.h  rust_repeated_field_generator.cpp  rust_repeated_field_generator.h  rust_source_generator.cpp  rust_source_generator.h
