[package]
name = "protrust"
version = "0.0.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2018"

[features]
# use std
std = []
# use checked addition when calculating value sizes
checked_size = []

[[bench]]
name = "io"
harness = false

[dependencies]
trapper = "2.0"
either = "1.5"
ahash = "0.2"
hashbrown = { version = "0.6", features = ["nightly", "raw"] }

[dev-dependencies]
criterion = "0.3"
assert_matches = "1.3"