[package]
name = "protrust"
version = "0.0.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2018"

[features]
# use std
std = []
# use checked addition when calculating value sizes
checked_size = []

[dependencies]
ahash = "0.2"

[dependencies.hashbrown]
version = "0.6"
features = ["nightly"]